fix: Fix bug z-index
This commit will fix the bug with respect to the about us image overlapping the top-right hand corner of the header.

--- a/Frontend/src/Component/Navbar/navbar.style.scss
+++ b/Frontend/src/Component/Navbar/navbar.style.scss
@@ -5,6 +5,7 @@
   text-align: start;
   position: relative;
   background: #fff;
+  z-index: 999;
   h2,
   h3,
   p,
